Refactor proxy service and web-api service

--- a/ds-routing-zuul/src/main/resources/application.yml
+++ b/ds-routing-zuul/src/main/resources/application.yml
@@ -1,12 +1,10 @@
 server:
-  port: 8082
+  port: 8081
+
 spring:
   application:
-    name: web-api
-  data:
-    mongodb:
-      database: webflux
-      uri: mongodb://localhost:27017
+    name: routing-zuul
+
 eureka:
   client:
     service-url:
