--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>ds-routing-zuul</module>
         <module>ds-discovery</module>
         <module>ds-web-api</module>
+        <module>ds-data-backup</module>
     </modules>
 
     <properties>
@@ -33,7 +34,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
         </dependency>
     </dependencies>
 
