add hystrix in proxy component

--- a/ds-routing-zuul/src/main/resources/application.yml
+++ b/ds-routing-zuul/src/main/resources/application.yml
@@ -9,3 +9,18 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
+
+logging:
+  level:
+    com.neflix: DEBUG
+
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enable:true
+        isolation:
+          thread:
+            timeoutInMilliseconds:2
+
