--- a/ds-routing-gateway/pom.xml
+++ b/ds-routing-gateway/pom.xml
@@ -8,22 +8,15 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>ds-routing-zuul</artifactId>
+	<artifactId>ds-routing-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ds-routing-zuul</name>
+	<name>ds-routing-gateway</name>
+	<description>Demo project for Spring Boot</description>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 
 		<dependency>
