--- a/ds-routing-gateway/src/main/resources/application.yml
+++ b/ds-routing-gateway/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
-  port: 8082
+  port: 8083
 
 spring:
   application:
     name: routing-gateway
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka/
