--- a/ds-web-api/pom.xml
+++ b/ds-web-api/pom.xml
@@ -9,11 +9,10 @@
 	</parent>
 
 	<artifactId>ds-web-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>ds-web-api</name>
 
 	<dependencies>
-
 		<!-- Spingboot official -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -34,6 +33,10 @@
 			<artifactId>mongodb-plus-spring-boot-starter</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.dml.ds</groupId>
+			<artifactId>ds-domain</artifactId>
+		</dependency>
 		<!-- Third party-->
 
 		<dependency>
