--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.6.RELEASE</version>
+        <version>2.3.7.RELEASE</version>
     </parent>
 
     <groupId>com.dml.ds</groupId>
@@ -23,6 +23,7 @@
         <module>ds-data-backup</module>
         <module>ds-routing-gateway</module>
         <module>ds-domain</module>
+        <module>ds-auth-service</module>
     </modules>
 
     <properties>
@@ -61,13 +62,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
