--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <module>ds-discovery-eureka</module>
         <module>ds-web-api</module>
         <module>ds-data-backup</module>
-        <module>ds-gateway-springcloud</module>
+        <module>ds-gateway-spring-cloud</module>
         <module>ds-domain</module>
         <module>ds-auth-service</module>
     </modules>
@@ -62,4 +62,16 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
